--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,57 @@
-pytest>=7.0.0
-requests>=2.31.0
-PyYAML>=6.0
-allure-pytest>=2.13.5
-loguru>=0.7.0
-jsonpath>=0.82
-pytest-xdist>=3.3.1
+allure-pytest==2.15.0
+allure-python-commons==2.15.0
+async-timeout==5.0.1
+asynch==0.3.0
+attrs==25.4.0
+bcrypt==5.0.0
+blinker==1.9.0
+certifi==2025.10.5
+cffi==2.0.0
+charset-normalizer==3.4.4
+ciso8601==2.3.3
+click==8.3.0
+clickhouse-driver==0.2.9
+clickhouse-sqlalchemy==0.3.2
+coverage==7.8.0
+cryptography==46.0.3
+dnspython==2.8.0
+exceptiongroup==1.3.0
+Flask==3.1.2
+git-filter-repo==2.47.0
+idna==3.11
+iniconfig==2.3.0
+invoke==2.2.1
+itsdangerous==2.2.0
+Jinja2==3.1.6
+jsonpath==0.82.2
+jsonpath-ng==1.7.0
+leb128==1.0.8
+loguru==0.7.3
+lz4==4.4.4
+MarkupSafe==3.0.3
+numpy==2.2.6
+packaging==25.0
+pandas==2.3.3
+paramiko==4.0.0
+pluggy==1.6.0
+ply==3.11
+pycparser==2.23
+Pygments==2.19.2
+pymongo==4.15.3
+PyMySQL==1.1.2
+PyNaCl==1.6.0
+pytest==8.4.2
+python-dateutil==2.9.0.post0
+pytz==2025.2
+PyYAML==6.0.3
+redis==7.0.1
+requests==2.32.5
+six==1.17.0
+SQLAlchemy==2.0.44
+tomli==2.3.0
+typing_extensions==4.15.0
+tzdata==2025.2
+tzlocal==5.3.1
+urllib3==2.5.0
+Werkzeug==3.1.3
+zstd==1.5.7.2
